Dodanie listy testow

--- a/README
+++ b/README
@@ -1,3 +1,16 @@
 ----- Phoronix Test Suite ------
 Konfiguracja do Phoronix Test Suite by mwink
+Lista testow:
+- pts/compress-7zip
+- pts/compress-gzip
+- pts/build-imagemagick
+- pts/build-linux-kernel
+- pts/scimark2
+- pts/openssl
+- pts/apache
+- pts/aio-stress
+- pts/postmark
+- pts/compilebench
+- pts/tiobench
+- pts/ramspeed
 ----------- wersja 1.0 ---------
